--- a/nav_website_yangp.html
+++ b/nav_website_yangp.html
@@ -632,6 +632,7 @@ var commonWebsites={
 ,"今日热榜":"https://tophub.today/"
 ,"今日头条":"https://www.toutiao.com/"
 ,"知乎":"https://www.zhihu.com/search?type=content&q="
+,"yeeach":"https://www.yeeach.com/"
 ,"虫部落":"https://www.chongbuluo.com/"
 ,"阿里云盘":"https://www.alipan.com/"
 ,"百度网盘":"https://pan.baidu.com/"
@@ -664,10 +665,8 @@ var govWebsites={"发改委":"http://www.ndrc.gov.cn/",
 
 var sportsWebsites={"腾讯体育":"https://sports.qq.com/",
 "虎扑":"https://www.hupu.com/",
-"极速体育":"http://www.jisutiyu.com/",
 "优直播":"https://m.yoozhibo.net/",
 "TV直播":"https://tvzhibo.com/zuqiu/",
-"飞速直播":"http://feisuzhibo.com/",
 "直播吧":"https://m.zhibo8.cc/",
 "cctv5":"http://tv.cctv.com/live/cctv5/",
 "500":"https://trade.500.com/jczq/index.php?playid=271&g=2",
@@ -804,7 +803,9 @@ var funWebsites ={"DoItYouself":"https://www.doityourself.com/",
 "纪录片":"http://www.jlpcn.net/",
 "左岸读书":"http://www.zreading.cn/"};
 
-var toolsWebsites={"在线图片转换":"https://jinaconvert.com/cn/",
+var toolsWebsites={
+"Win10激活":"https://cmwtat.cloudmoe.com/",
+"在线图片转换":"https://jinaconvert.com/cn/",
 "Toolfk在线工具箱":"https://www.toolfk.com/",
 "一个工具箱":"http://www.atoolbox.net/",
 "爱资料工具":"https://www.toolnb.com/",
@@ -917,7 +918,6 @@ var ebookWebsites ={
 "虫部落":"https://ebook.chongbuluo.com/"
 ,"lorefree":"https://ebook2.lorefree.com/"
 //,"iread.cf":"http://www.iread.cf/"
-,"知轩藏书":"https://zxcs.info/"
 ,"Anna’s Archive":"https://annas-archive.org/"
 ,"ZLibrary":"https://1lib.education/"//"https://1lib.limited/"//"https://z-lib.org/","b-ok":"https://b-ok.cc/"
 ,"manybooks":"http://manybooks.net"
@@ -945,6 +945,10 @@ var ebookWebsites ={
 ,"英文小说":"https://avxhm.se/"
 ,"socialsciences":"https://socialsciences.mcmaster.ca/econ/ugcm/3ll3/ "
 ,"zum.de":"https://www.zum.de/portal/"
+//网络小说下载网站
+,"黑岩":"http://www.xheiyan.info/"
+,"笔趣阁小说":"http://downnovel.com/"
+,"知轩藏书":"https://zxcs.info/"
 };
 
 
@@ -994,6 +998,12 @@ var sites = [
       "id": "yandex",
 	  "color": "success",
       "queryUrl": "https://yandex.com/search/?text={}"
+    },
+			
+    {
+      "name": "Github",
+      "id": "Github",
+      "queryUrl": "https://github.com/search?q={}"
     },
     {
       "name": "百度",
@@ -1057,22 +1067,9 @@ var sites = [
       "queryUrl": "https://www.douban.com/search?q={}"
     },
     {
-      "name": "网盘1",
+      "name": "磁力猫",
       "id": "panci",      
       "queryUrl": "https://www.cilimao.cc/search?word={}&page=1"
-    },
-   {
-		  "name": "网盘2",
-		  "id": "wangpan007",
-		  "queryUrl": "https://wangpan007.com/share/kw?keyword={}",
-			"color": "success",
-			 "display": false
-    },					
-		
-    {
-      "name": "影视",
-      "id": "ziyuan",
-      "queryUrl": "http://ifkdy.com/?q={}&p=1"
     },
     {
       "name": "地图",
