--- a/nav_website_yangp.html
+++ b/nav_website_yangp.html
@@ -728,6 +728,7 @@ var softwareWebsites={
 ,"爱范儿":"https://www.ifanr.com/"
 ,"少数派":"https://www.sspai.com"
 ,"异次元软件":"https://www.iplaysoft.com/"
+,"TVapp":"https://www.tvsbook.com/resources/"
 ,"gooles apps":"https://apps.evozi.com/apk-downloader/"
 ,"AlternativeTo":"https://alternativeto.net/"
 ,"软餐":"https://www.ruancan.com/"
@@ -765,10 +766,16 @@ var programWebsites ={"github":"https://github.com/",
 "jsbin":"http://jsbin.com",
 "jsfiddle":"http://jsfiddle.net/"
 };
-
+/*原BTNULL
+www.gying.net
+www.gying.org
+www.gying.si
+www.gying.in
+www.gyg.la
+www.gyg.si*/
 var videoWebsites ={
 "BiliBili":"https://www.bilibili.com/"
-,"BtNull":"https://www.btnull.si"
+,"BtNull":"https://www.gying.si"
 ,"茶杯狐":"https://www.cupfox.cc/"
 ,"旋风视频":"https://miao101.com/"
 ,"m3u8播放器":"https://www.m3u8play.com/"
@@ -804,6 +811,7 @@ var funWebsites ={"DoItYouself":"https://www.doityourself.com/",
 "左岸读书":"http://www.zreading.cn/"};
 
 var toolsWebsites={
+"github文件下载":"https://tool.mkblog.cn/downgit/#/home",
 "Win10激活":"https://cmwtat.cloudmoe.com/",
 "在线图片转换":"https://jinaconvert.com/cn/",
 "Toolfk在线工具箱":"https://www.toolfk.com/",
@@ -919,7 +927,7 @@ var ebookWebsites ={
 ,"lorefree":"https://ebook2.lorefree.com/"
 //,"iread.cf":"http://www.iread.cf/"
 ,"Anna’s Archive":"https://annas-archive.org/"
-,"ZLibrary":"https://1lib.education/"//"https://1lib.limited/"//"https://z-lib.org/","b-ok":"https://b-ok.cc/"
+,"ZLibrary":"https://z-lib.yt/"//"https://1lib.limited/"//"https://z-lib.org/","b-ok":"https://b-ok.cc/"
 ,"manybooks":"http://manybooks.net"
 //,"周读":"http://www.ireadweek.com/"
 ,"鸠摩":"https://www.jiumodiary.com/"
@@ -946,6 +954,7 @@ var ebookWebsites ={
 ,"socialsciences":"https://socialsciences.mcmaster.ca/econ/ugcm/3ll3/ "
 ,"zum.de":"https://www.zum.de/portal/"
 //网络小说下载网站
+,"嘀嘀叭叭":"http://xs.fangzhong.wang/"//https://xs.ddbb.top
 ,"黑岩":"http://www.xheiyan.info/"
 ,"笔趣阁小说":"http://downnovel.com/"
 ,"知轩藏书":"https://zxcs.info/"
@@ -1051,7 +1060,13 @@ var sites = [
       "name": "知乎",
       "id": "zhihu",
       "queryUrl": "https://www.zhihu.com/search?q={}"
-    },{
+    },
+    {
+      "name": "BiliBili",
+      "id": "BiliBili",
+      "queryUrl": "https://search.bilibili.com/all?keyword={}"
+    },
+    {
       "name": "百科",
       "id": "baike",
       "queryUrl": "https://baike.baidu.com/item/{}"
